fix background on messages.html

--- a/src/messages.html
+++ b/src/messages.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body class="container-fluid vh-100">  
+<body class="container-fluid vh-100 bodyMessages">  
     <div class="row h-100 d-flex">
         <div class="col">
             <div class="row justify-content-between">
