--- a/src/messages.html
+++ b/src/messages.html
@@ -33,6 +33,7 @@
                     <div class="col-1 ms-3">
                         <input class="form-control" type="submit" value="Salvar">
                     </div>
+                    <div class="col-1" id="liveAlertPlaceholder"></div>
                 </form>
             </div>
             <div class="row bg-body bg-opacity-75 rounded-3">
