--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body class="container-fluid vh-100 bodyIndex">
+    <div id="liveAlertPlaceholder"></div>
     <div class="row h-100 d-flex justify-content-center align-items-center justify-content-around">
         <div class="mainPageLogin col-md-6 col-sm-8 bg-info h-75 bg-opacity-25 rounded-3 my-1">
             <div class="row h-100 d-flex flex-column justify-content-center align-items-center">
