messages.html responsiveness

--- a/src/messages.html
+++ b/src/messages.html
@@ -13,10 +13,10 @@
     <div class="row h-100 d-flex">
         <div class="col">
             <div class="row justify-content-between">
-                <div class="col-4 h1 customColorPurple bg-light bg-opacity-75 rounded-3">
+                <div class="col-sm-4 h1 customColorPurple bg-light bg-opacity-75 rounded-3">
                     Meus recados
                 </div>
-                <div class="col-2 d-flex align-items-center justify-content-center">
+                <div class="col-sm-2 d-flex align-items-center justify-content-center">
                     <button class="logoutBtn btn btn-outline-secondary">
                         <a href="./index.html">Logout</a>
                     </button>
@@ -24,19 +24,19 @@
             </div>
             <div class="row my-3">
                 <form class="d-flex flex-row justify-content-start" id="form_messages">
-                    <div class="col-4">
+                    <div class="col-sm-4">
                         <input required class="form-control" type="text" name="input_msgDescr" id="input_msgDescr" placeholder="Descrição">
                     </div>
-                    <div class="col-4 ms-1">
+                    <div class="col-sm-4 ms-1">
                         <input required class="form-control" type="text" name="input_msgDetails" id="input_msgDetails" placeholder="Detalhamento">
                     </div>
-                    <div class="col-1 ms-3">
+                    <div class="col-sm-2 ms-3">
                         <input class="form-control" type="submit" value="Salvar">
                     </div>
                 </form>
             </div>
             <div class="row bg-body bg-opacity-75 rounded-3">
-                <div class="col table-responsive">
+                <div class="col-12 table-responsive">
                     <table class="table table-hover text-center">
                         <thead>
                             <tr>
